[package]
name = "hover-dns"
version = "0.1.0"
authors = ["Adam Simpson <adam@adamsimpson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
argh = "0.1.3"
serde = "1.0.116"
ureq = { version = "1.5.1", features = ["json"] }
trust-dns-resolver = "*"

[profile.release]
opt-level = 'z'
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false